<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sComplete">
    <LinearLayout
        android:id="@+id/lComplete"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <TextView
        android:paddingTop="30dp"
        android:text="@string/workout_complete"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:id="@+id/hrCard"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true">

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="300dip"
            android:id="@+id/hrGraph" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true">

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="300dip"
            android:id="@+id/tempoGraph" />
    </android.support.v7.widget.CardView>

    <TextView
        android:paddingTop="30dp"
        android:text="@string/playlist"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnPlaylist"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_playlist"
        android:layout_gravity="center_horizontal"
        android:onClick="createPlaylist"
        android:backgroundTint="@color/colorAccent"
        android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>

