<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/info_text"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/peak"
            android:textAllCaps="false" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/start_workout"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_height="40dp"
            android:onClick="onPlayButtonClicked"
            android:text="@string/start_workout"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/colorAccent"
            android:textStyle="normal|bold"
            android:textSize="14sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_below="@id/card_view"
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/cardio"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cardio"
            android:textAllCaps="false" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/start_workout2"
            android:onClick="onPlayButtonClicked"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_height="40dp"
            android:text="@string/start_workout"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:backgroundTint="@color/colorAccent" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_below="@id/card_view2"
        android:id="@+id/card_view3"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/fat_burn"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/cardview_dark_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fat_burn"
            android:textAllCaps="false" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/start_workout3"
            android:onClick="onPlayButtonClicked"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_height="40dp"
            android:text="@string/start_workout"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:backgroundTint="@color/colorAccent" />
    </android.support.v7.widget.CardView>

</RelativeLayout>