<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ScrollView
        android:id="@+id/health_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/health_profile_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:paddingTop="30dp"
                android:text="@string/health_profile"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:id="@+id/spinner"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:id="@+id/music_pref"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/submit"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:text="@string/submit"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>

